# emoji

./: .gitignore  CMakeLists.txt  README  Readme.md  compile_commands.json  convert.py  emoji.csv  emoji_list.html  output_no_link.html  remove_links.py
assets/: index.json
cmake/: Cache.cmake  CompilerWarnings.cmake
src/: CMakeLists.txt  emoji.h  emojiwindow.cpp  emojiwindow.h  main.cpp  window.cpp  window.h
src/emoji/: CMakeLists.txt  emoji.cpp  emoji.h
